# crypto

./: .travis.yml  Cargo.toml  README.md
ext/: chacha8.c  chacha8.h
src/: build.rs  chacha.rs  hash.rs  keys.rs  lib.rs
