[package]
name = "cryptonote-crypto"
version = "0.2.2"
authors = ["Christopher Tobias <ctobias@gmx.com>", "calidion <calidion@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Cryptography Primitives for Cryptonote"

build = "src/build.rs"

[dependencies]
arrayref = "0.3"
curve25519-dalek = "1"
hex = "0.3"
rand = "0.6"
sha3 = "0.8"
cryptonight = "0.1.0"
chacha = "0.1.0"
cc = "1.0"

[badges]
travis-ci = { repository = "cryptonote-rust/crypto", branch = "master" }
codecov = { repository = "cryptonote-rust/crypto", branch = "master", service = "github" }
